@@ -1,3 +1,11 @@
+2009-09-14  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkMenuDraw.c (TkPostSubmenu): Fix reposting of submenu in
+	* win/tkWinMenu.c (TkWinHandleMenuEvent): torn off Windows menu.
+	[Bug 873613]
+	(DrawMenuEntryArrow): Draw Win menu arrow after being torn
+	off. [Bug 873608]
+
 2009-09-09  Donal K. Fellows  <dkf@users.sf.net>
 
 	* unix/tkUnixRFont.c (InitFont): Move pattern disposal in error case
